<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<Button
    android:id="@+id/btprox"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:enabled="true"
    android:text="@string/BluetoothProx"
    android:textColor="@android:color/primary_text_light_nodisable" />

<Button
    android:id="@+id/traffctxt"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:enabled="true"
    android:text="@string/TrafficCtxt" />

<Button
    android:id="@+id/snoozeButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/SnoozeAlrm" />

<Button
    android:id="@+id/cancelButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/CancelAlrm" />



</LinearLayout>