<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/src"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/Source"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/srcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/src"
        android:layout_alignBottom="@+id/src"
        android:layout_alignLeft="@+id/destText"
        android:layout_alignParentRight="true"
        android:ems="10" />

    <EditText
        android:id="@+id/destText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/srcText"
        android:layout_marginTop="51dp"
        android:layout_toRightOf="@+id/dest"
        android:ems="10" />

    <TextView
        android:id="@+id/dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/destText"
        android:layout_alignBottom="@+id/destText"
        android:layout_alignParentLeft="true"
        android:text="@string/Destination"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:text="@string/Time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TimePicker
        android:id="@+id/timePicker_traffparam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/destText" />

    <Button
        android:id="@+id/backbuttontraff    "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/srchButton"
        android:layout_alignBottom="@+id/srchButton"
        android:layout_alignRight="@+id/destText"
        android:text="@string/back" />

    <Button
        android:id="@+id/srchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/destText"
        android:layout_below="@+id/timePicker_traffparam"
        android:layout_marginTop="62dp"
        android:text="@string/Search" />

</RelativeLayout>